feat: Add email processing and notification modules
- Implemented emailProcessor.js for handling Gmail threads and messages.
- Created emotionStorage.js for storing and retrieving emotion analysis results.
- Added ignoreRules.js to manage email ignore conditions.
- Developed notificationRules.js to determine when to send notifications based on email analysis.
- Introduced triggerSetup.js for setting up Google Apps Script triggers.
- Added slack.js for sending notifications to Slack, including email alerts and daily statistics.
- Created statistics.js for generating daily email statistics and reports.
- Implemented utils.js for common utility functions used across modules.
- Removed old deploy.sh script and added new deployment scripts for test and production environments.
- Updated init.sh to streamline project setup and initialization.
- Added sync scripts to facilitate synchronization of compiled code to test and production environments.

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,49 @@ lib/
 dist/
 backup/
 src/Code.js
+
+# IDE 與編輯器相關
+.idea/
+.vscode/
+*.sublime-*
+.DS_Store
+
+# 環境設定檔
+.env
+.env.local
+.env.*.local
+
+# 日誌
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# 快取
+.cache/
+.npm/
+.eslintcache
+
+# 建置過程產生的臨時檔案
+.tmp/
+temp/
+
+# Apps Script 特定檔案
+.clasp.json
+.clasprc.json
+
+# 環境特定檔案 (但保留目錄結構)
+prod/credentials.json
+prod/token.json
+prod/.clasp.json
+prod/config.secret.js
+prod/dist/
+prod/src/Code.js
+
+test/credentials.json
+test/token.json
+test/.clasp.json
+test/config.secret.js
+test/dist/
+test/src/Code.js
+common/src/Code.js
