feat: Implement Slack API core functionality and integrate with email processing
- Add core/slack.js for sending notifications and daily statistics to Slack.
- Update main.js to utilize searchTools for building email queries.
- Refactor emailProcessor.js to use modular functions for processing emails.
- Create modules/searchTools.js for managing Gmail search queries.
- Introduce modules.js for managing module namespaces and function mappings.
- Enhance triggerSetup.js to manage automatic triggers for email checks and data cleanup.
- Update notification and ignore rules modules to include dependency documentation.
- Clean up emotionStorage.js to ensure proper data management.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-node_modules/*
+node_modules/
 lib/
 dist/
 backup/
@@ -48,4 +48,4 @@ test/.clasp.json
 test/config.secret.js
 test/dist/
 test/src/Code.js
-common/src/Code.js
+common/src/
