feat: 更新專案結構與打包流程，移除 ES5 目標設定並整合模組命名空間管理

--- a/common/package.json
+++ b/common/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Gmail + Gemini + Slack Google Apps Script",
   "scripts": {
-    "babel": "babel ./modules ./main.js ./env.js ./gmail.js ./slack.js ./statistics.js ./utils.js --out-dir lib --extensions \".js\" --copy-files",
+    "babel": "babel ./core ./modules ./main.js ./env.js ./statistics.js ./utils.js ./modules.js --out-dir lib --extensions \".js\" --copy-files",
     "build": "npm run babel && node esbuild.config.js",
     "copy": "cp dist/bundle.js src/Code.js",
     "deploy": "npm run build && npm run copy && clasp push"
