feat: 更新 Babel 和 esbuild 配置，整合模組命名空間管理，新增 glob 依賴，調整部署腳本權限

--- a/common/.babelrc
+++ b/common/.babelrc
@@ -1,9 +1,13 @@
 {
   "presets": [
-    ["@babel/preset-env", {
-      "targets": {
-        "ie": "11"
+    [
+      "@babel/preset-env",
+      {
+        "targets": {
+          "esmodules": true
+        },
+        "modules": "commonjs"
       }
-    }]
+    ]
   ]
 }
