--- a/common/package.json
+++ b/common/package.json
@@ -12,6 +12,7 @@
     "@babel/cli": "^7.27.0",
     "@babel/core": "^7.26.10",
     "@babel/preset-env": "^7.26.9",
-    "esbuild": "^0.19.12"
+    "esbuild": "^0.19.12",
+    "glob": "^11.0.1"
   }
 }
