feat: Implement Google Gemini API integration for email analysis
- Add gemini.js for email sentiment analysis, daily report generation, and result logging.
- Create ignoreRules.js to manage email ignore conditions.
- Develop notificationRules.js to determine when to send notifications based on email analysis.
- Introduce searchTools.js for Gmail search functionalities and batch processing.
- Set up triggerSetup.js for automated triggers management.
- Implement statistics.js for daily email statistics and keyword reporting.
- Add utils.js for common utility functions including Slack notifications and date formatting.
- Update sync scripts to reflect new directory structure and build outputs.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,23 @@
 node_modules/
-lib/
-dist/
 backup/
-src/Code.js
+
+# 新結構產物
+/src/build/babel/
+/src/build/bundle/
+/src/build/output/
+
+# 部署產物
+/deploy/test/Code.js
+/deploy/test/credentials.json
+/deploy/test/token.json
+/deploy/test/.clasp.json
+/deploy/test/config.secret.js
+
+/deploy/prod/Code.js
+/deploy/prod/credentials.json
+/deploy/prod/token.json
+/deploy/prod/.clasp.json
+/deploy/prod/config.secret.js
 
 # IDE 與編輯器相關
 .idea/
@@ -48,8 +63,3 @@ test/.clasp.json
 test/config.secret.js
 test/dist/
 test/src/Code.js
-common/src/
-prod/Code.js
-test/Code.js
-distEnvTest/Code.js
-distEnvProd/Code.js
