--- a/src/package.json
+++ b/src/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "Gmail + Gemini + Slack Google Apps Script",
   "scripts": {
-    "babel": "babel ./core ./modules ./main.js ./env.js ./statistics.js ./utils.js ./modules.js --out-dir lib --extensions \".js\" --copy-files",
+    "babel": "babel ./source/core ./source/modules ./source/main.js ./source/env.js ./source/statistics.js ./source/utils.js ./source/modules.js --out-dir ./build/babel --extensions \".js\" --copy-files",
     "build": "npm run babel && node esbuild.config.js",
-    "copy": "cp dist/bundle.js src/Code.js",
+    "copy": "cp ./build/bundle/bundle.js ./build/output/Code.js",
     "deploy": "npm run build && npm run copy && clasp push"
   },
   "devDependencies": {
